tests push/pop, constructor

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "node ./test/index.js"
+    "test": "c8 node ./test/index.js"
+  },
+  "devDependencies": {
+    "c8": "^10.1.3"
   }
 }
